--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -1,8 +1,17 @@
-name: Build PDF
+name: Build and Publish PDF
 
 on:
   push:
     branches: [main]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -19,8 +28,29 @@ jobs:
       - name: Build PDF
         run: make pdf
 
-      - name: Upload PDF artifact
+      - name: Prepare Pages artifact
+        run: |
+          mkdir -p dist
+          cp notes_progconcur.pdf dist/notes_progconcur.pdf
+
+      - name: Upload PDF artifact (workflow)
         uses: actions/upload-artifact@v4
         with:
           name: notes_progconcur
           path: notes_progconcur.pdf
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
